# thesis-agent-usecases

./: .env.example  CLAUDE.md  README.md  create_conversation.py  pyproject.toml  twitter-agent.py
tests/: __init__.py  test_cli.py  test_config.py
twitter_agent/: __init__.py  agent.py  cli.py  config.py  thesis_research.py  twitter_client.py
